# rfuzz

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile  aflwrap.cpp  build.sbt  build_all.sh
.github/workflows/: ci.yml
analysis/: .gitignore  analysis.py  e2e.py  format.py  launch.py  riscv.py
analysis/test/icache.out/: config.json  entry_0000.json  entry_0001.json  entry_0002.json  entry_0003.json  entry_0004.json  entry_0005.json  entry_0006.json  entry_0007.json  entry_0008.json  entry_0009.json  entry_0010.json  entry_0011.json  entry_0012.json  entry_0013.json
benchmarks/: FFTSmall.fir  ICache.fir  ICacheCover.fir  NonBlockingDCache.fir  Readme.md  RocketTile.fir  Sodor1Stage.anno.json  Sodor1Stage.fir  Sodor2Stage.fir  Sodor3Stage.anno.json  Sodor3Stage.fir  Sodor5Stage.fir  TLI2C.fir  TLPWM.fir  TLSPI.fir  TLUART.fir  ibex_decoder.fir  ibex_decoder.v  ibex_id_stage.fir
benchmarks/ibex/: Makefile
doc/: 2017-12-18_fpga_pc_debugging.log.md  2018-03-12_sodor_benchmark_investigation.md
e2e/: end_to_end_top.cpp  meson.build
example/: gcd.fir  gcd_coverage.toml  gcdcov.fir  gcdtester.fir  module_interface.hpp
formal/: Readme.md  convert_traces.py
formal/FFTSmall/: FFTSmall.v  FFTSmall_formal.sv  cover.sby
formal/ICache/: ICache.v  ICache_formal.sv  cover.sby
formal/Sodor1Stage/: Sodor1Stage.v  Sodor1Stage_formal.sv  cover.sby
formal/Sodor3Stage/: Sodor3Stage.v  Sodor3Stage_formal.sv  cover.sby
formal/Sodor5Stage/: Sodor5Stage.v  Sodor5Stage_formal.sv  cover.sby
formal/TLI2C/: TLI2C.v  TLI2C_VHarness.v  TLI2C_formal.sv  convert_traces.py  cover_btormc.sby  latest.json
formal/TLSPI/: TLSPI.v  TLSPI_formal.sv  cover.sby  cover_btormc.sby
fpga/: .gitignore  Makefile  Readme.md  block_design.tcl  make_bitstream.tcl  system.tcl
fuzzer/: .gitignore  Cargo.toml  Readme.md
fuzzer/.cargo/: config
fuzzer/src/: analysis.rs  config.rs  main.rs  queue.rs  stats.rs  test.rs
harness/: .gitignore  build.sbt
harness/src/: .midas.scala.swp  config.scala  coverage.scala  dut.scala  harness.scala  verilator.scala
harness/test/: harness.scala
in/: test0
instrumentation/: .gitignore  build.sbt
instrumentation/src/: .editorconfig
midas/: .gitignore  Makefile  build.sbt  zynq.mk
project/: plugins.sbt
results/: Readme.md
results/1.jqf2.i2c.out/: entry_0000.json  entry_0001.json  entry_0002.json  entry_0003.json  entry_0004.json  entry_0005.json  entry_0006.json  entry_0007.json  entry_0008.json  entry_0009.json  entry_0010.json  entry_0011.json  entry_0012.json  entry_0013.json  entry_0014.json  entry_0015.json  entry_0016.json  entry_0017.json  entry_0018.json  entry_0019.json  entry_0020.json  entry_0021.json  entry_0022.json  entry_0023.json  entry_0024.json  entry_0025.json  entry_0026.json  entry_0027.json  entry_0028.json  entry_0029.json  entry_0030.json  entry_0031.json  entry_0032.json  entry_0033.json  entry_0034.json  entry_0035.json  entry_0036.json  entry_0037.json  entry_0038.json  entry_0039.json  (+57 more)
results/4.jqf2.i2c.out/: config.json  entry_0000.json  entry_0001.json  entry_0002.json  entry_0003.json  entry_0004.json  entry_0005.json  entry_0006.json  entry_0007.json  entry_0008.json  entry_0009.json  entry_0010.json  entry_0011.json  entry_0012.json  entry_0013.json  entry_0014.json  entry_0015.json  entry_0016.json  entry_0017.json  entry_0018.json  entry_0019.json  entry_0020.json  entry_0021.json  entry_0022.json  entry_0023.json  entry_0024.json  entry_0025.json  entry_0026.json  entry_0027.json  entry_0028.json  entry_0029.json  entry_0030.json  entry_0031.json  entry_0032.json  entry_0033.json  entry_0034.json  entry_0035.json  entry_0036.json  entry_0037.json  entry_0038.json  (+63 more)
results/rocket.out/: config.json  entry_0000.json  entry_0001.json  entry_0002.json  entry_0003.json  entry_0004.json  entry_0005.json  entry_0006.json  entry_0007.json  entry_0008.json  entry_0009.json  entry_0010.json  entry_0011.json  entry_0012.json  entry_0013.json  entry_0014.json  entry_0015.json  entry_0016.json  entry_0017.json  entry_0018.json  entry_0019.json  entry_0020.json  entry_0021.json  entry_0022.json  entry_0023.json  entry_0024.json  entry_0025.json  entry_0026.json  entry_0027.json  entry_0028.json  entry_0029.json  entry_0030.json  entry_0031.json  entry_0032.json  entry_0033.json  entry_0034.json  entry_0035.json  entry_0036.json  entry_0037.json  entry_0038.json  (+48 more)
src/: .editorconfig  afl.c  afl.h  afl.hpp  analysis.rs  config.rs  forkclient.rs  fpga_queue.cpp  fpga_queue.hpp  fuzzer.hpp  main.rs  mutation.rs  queue.rs  shared_memory.cpp  shared_memory.hpp  top.cpp
src/mutation/: format.rs  mod.rs  mutators.rs
src/run/: afl.rs  buffered.rs  history.rs  mod.rs  pynq.rs  pynqchannel.rs  rwint.rs  shmem.rs
verilator/: afl.c  dut_gen.py  fpga_queue.cpp  fpga_queue.hpp  fuzzer.hpp  meson.build  meson_options.txt  module_interface.hpp  top.cpp  verilator.py
(+700 files in other folders)
